--- a/app/src/main/res/layout/activity_recoverpassword.xml
+++ b/app/src/main/res/layout/activity_recoverpassword.xml
@@ -50,7 +50,7 @@
                 android:layout_marginBottom="20dp"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -58,8 +58,9 @@
 
                 <EditText
                     android:id="@+id/digit1"
-                    android:layout_width="50dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
@@ -73,8 +74,9 @@
 
                 <EditText
                     android:id="@+id/digit2"
-                    android:layout_width="50dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
@@ -89,8 +91,9 @@
 
                 <EditText
                     android:id="@+id/digit3"
-                    android:layout_width="50dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
@@ -105,8 +108,9 @@
 
                 <EditText
                     android:id="@+id/digit4"
-                    android:layout_width="50dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
@@ -121,8 +125,9 @@
 
                 <EditText
                     android:id="@+id/digit5"
-                    android:layout_width="50dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
@@ -137,8 +142,9 @@
 
                 <EditText
                     android:id="@+id/digit6"
-                    android:layout_width="50dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
@@ -220,7 +226,7 @@
             android:gravity="center"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
-            android:visibility="visible">
+            android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -245,14 +251,17 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/btnSend"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ENVIAR"
-            style="@style/CustomButtonStyle"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSend"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="ENVIAR"
+                app:rippleColor="?attr/colorControlHighlight"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -276,7 +285,19 @@
             android:gravity="center"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:visibility="gone">
+            android:visibility="visible">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="textStart"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="Insira sua nova senha: "
+                android:layout_marginBottom="10dp"/>
+
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/passwordLayout"
@@ -308,6 +329,16 @@
                     android:inputType="textPassword"/>
 
             </com.google.android.material.textfield.TextInputLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:text="Agora que você verificou sua conta, voce podê inserir sua nova senha, e, em seguida, realizar seu acesso à plataforma"
+                android:layout_marginBottom="10dp"
+                />
 
             <Button
                 android:layout_marginTop="10dp"
@@ -347,7 +378,9 @@
         android:id="@+id/btnBack"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@null"
+        android:focusable="true"
+        android:clickable="true"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         app:tint="?android:attr/iconTint"
         android:src="@drawable/baseline_arrow_back_24"
         android:scaleType="fitXY"
