--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -104,7 +104,8 @@
                 android:textStyle="bold"
                 android:textSize="12sp"
                 android:textColor="@color/disabled"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:background="?android:attr/selectableItemBackground"/>
 
             <ImageButton
                 android:id="@+id/btnTheme"
