--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -2,84 +2,75 @@
 <RelativeLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:focusable="false"
-    tools:context=".home.fragments.Teams"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".home.fragments.Teams">
 
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/swipeRefresh"
-    >
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:focusable="false"
-        android:visibility="visible">
+        android:id="@+id/swipeRefresh">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
 
-    </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-    <LinearLayout
-        android:id="@+id/linearAlert"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:visibility="gone">
+            <LinearLayout
+                android:id="@+id/linearAlert"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:visibility="gone">
 
-        <ImageView
-            android:id="@+id/imgAlert"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/baseline_noteam_24"
-            android:layout_marginBottom="20dp"
-            app:tint="?android:attr/iconTint"/>
+                <ImageView
+                    android:id="@+id/imgAlert"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/baseline_noteam_24"
+                    android:layout_marginBottom="20dp"
+                    app:tint="?android:attr/iconTint"/>
 
-        <TextView
-            android:id="@+id/txtAlert"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textAlignment="center"
-            android:text="Você ainda não possui nenhuma equipe.\n Se deseja criar uma, clique no botão \'+\' abaixo"
-            android:layout_gravity="center"
-            android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/txtAlert"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:textAlignment="center"
+                    android:text="Você ainda não possui nenhuma equipe.\n Se deseja criar uma, clique no botão \'+\' abaixo"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"/>
 
-    </LinearLayout>
+            </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/btnAddTeam"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:contentDescription="AddTeamButton"
-        android:scaleType="fitXY"
-        app:tint="@color/white"
-        android:background="@drawable/circle_button"
-        android:src="@drawable/baseline_add_24"
-        android:layout_gravity="end|bottom"
-        android:layout_marginBottom="25dp"
-        android:layout_marginEnd="20dp"/>
+            <ImageButton
+                android:id="@+id/btnAddTeam"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="AddTeamButton"
+                android:scaleType="fitXY"
+                app:tint="@color/white"
+                android:background="@drawable/circle_button"
+                android:src="@drawable/baseline_add_24"
+                android:layout_gravity="end|bottom"
+                android:layout_marginBottom="25dp"
+                android:layout_marginEnd="20dp"/>
 
-</FrameLayout>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        </FrameLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-<ProgressBar
-android:id="@+id/loadingProgressBar"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_centerInParent="true"
-android:visibility="gone" />
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
