--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,10 @@
     <color name="green">#4FDB4A</color>
     <color name="greenDark">#06B600</color>
     <color name="blue">#0091FF</color>
+
     <color name="pastel">#DADADA</color>
+    <color name="home">#F0F0F0</color>
+
     <color name="red">#FF0000</color>
     <color name="yellow">#FFFB00</color>
 
