--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -11,11 +11,8 @@
 
     <item>
         <shape>
-            <solid android:color="?attr/fragmentsBackground"/>
+            <solid android:color="?attr/homeBackground"/>
             <corners android:radius="15dp"/>
-            <size
-                android:width="150dp"
-                android:height="120dp"/>
         </shape>
     </item>
 </ripple>
