--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -25,30 +25,45 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp">
+            android:layout_marginBottom="15dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgTeam"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/default_image"
-                tools:src="@drawable/e"/>
+                tools:src="@drawable/e"
+                android:layout_marginStart="15dp"/>
 
-            <TextView
-                android:id="@+id/lblTeamName"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/lblTeamName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="..."
+                    tools:text="Ecosynergy"
+                    android:textAlignment="center"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lblTeamHandle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="..."
                 tools:text="\@ecosynergyofc"
                 android:textAlignment="center"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="15sp"
+                android:textColor="@color/disabled"
+                android:textSize="12sp"
                 android:textStyle="bold" />
+
+            </LinearLayout>
 
             <ImageButton
                 android:id="@+id/btnClose"
@@ -59,23 +74,25 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_marginStart="20dp"
                 android:layout_gravity="end|center"
-                app:tint="?android:attr/iconTint"/>
+                app:tint="?android:attr/iconTint"
+                android:layout_marginEnd="15dp"/>
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="start"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp">
+            android:gravity="start">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="MQ7"
-                android:textSize="20sp"
+                android:text="Alertas emitidos pelos Sensores"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="18sp"
                 android:textStyle="bold"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginBottom="10dp"/>
 
 
@@ -84,7 +101,9 @@
                 android:layout_height="300dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="vertical"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp">
 
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/mq7Chart"
@@ -108,20 +127,111 @@
                 </com.facebook.shimmer.ShimmerFrameLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:padding="10dp"
+                android:background="@drawable/home_background">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Diária média de Emissões"
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
+
+
+
+                    <Spinner
+                        android:entries="@array/period_array"
+                        android:id="@+id/spinnerPeriod"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:background="@drawable/spinner_home"
+                        android:layout_marginStart="5dp"
+                        android:spinnerMode="dropdown"
+                        android:visibility="gone"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center">
+                    <TextView
+                        android:id="@+id/txtValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:text="5322"
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:layout_marginStart="10dp"/>
+
+                    <TextView
+                        android:id="@+id/txtGoal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:layout_marginStart="2dp"
+                        android:text="toneladas"
+                        android:textStyle="bold"
+                        android:textColor="?android:attr/textColorPrimary"/>
+
+                    <TextView
+                        android:id="@+id/txtMeasure"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="16sp"
+                        android:text="/dia"
+                        android:layout_marginStart="2dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/greenDark"/>
+
+                    <TextView
+                        android:id="@+id/txtPercentage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:text="121.1% Acima"
+                        android:layout_marginEnd="15dp"
+                        android:textStyle="bold"
+                        android:textColor="?android:attr/textColorPrimary"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MQ135"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="vertical"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:visibility="gone">
 
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/mq135Chart"
@@ -151,14 +261,16 @@
                 android:text="Sensor de Fogo"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="vertical"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:visibility="gone">
 
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/fireChart"
