--- a/app/src/main/res/layout/activity_team_overview.xml
+++ b/app/src/main/res/layout/activity_team_overview.xml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_height="match_parent">
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    android:layout_marginTop="60dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="top"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:src="@drawable/default_image"
             tools:src="@drawable/e"
             android:id="@+id/teamPicture"
             android:visibility="gone"
-            android:layout_marginEnd="10dp"
             android:layout_gravity="center"/>
 
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmerImg"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             app:shimmer_auto_start="true"
             android:visibility="visible"
-            android:layout_marginEnd="10dp"
             android:layout_gravity="center">
 
             <View
@@ -54,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Informações da Equipe"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textColor="?android:attr/textColorPrimary"
             android:textStyle="bold"/>
 
@@ -63,11 +68,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:layout_gravity="bottom"
             android:background="?android:attr/selectableItemBackground"
             android:focusable="true"
             android:clickable="true"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="14dp"
@@ -95,19 +100,18 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:layout_marginBottom="2dp"/>
 
         <TextView
             android:id="@+id/txtTeamName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="?android:attr/textColorPrimary"
             tools:text="Ecosynergy"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:text="\@ da Equipe"
@@ -116,19 +120,18 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:layout_marginBottom="2dp"/>
 
         <TextView
             android:id="@+id/txtHandle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="?android:attr/textColorPrimary"
             tools:text="\@ecosynergy"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:text="Descrição"
@@ -137,19 +140,18 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:layout_marginBottom="2dp"/>
 
         <TextView
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="?android:attr/textColorPrimary"
             tools:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:text="Fuso horário"
@@ -158,20 +160,19 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:layout_marginBottom="2dp"/>
 
         <TextView
             android:id="@+id/txtTimezone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:textColor="?android:attr/textColorPrimary"
+            android:inputType="textNoSuggestions"
             tools:text="(UTC-03:00) Brasilia"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:text="Atividade/Setor"
@@ -180,7 +181,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:visibility="visible"
             android:layout_marginBottom="2dp"/>
 
@@ -188,129 +189,121 @@
             android:id="@+id/txtActivities"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="?android:attr/textColorPrimary"
-            android:layout_marginBottom="20dp"
+            android:textSize="18sp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="15dp"
             tools:text="Agricultura/Cultivo de Plantas"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Metas de Emissões"
-            android:textSize="16sp"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"/>
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Metas de Emissões"
+                android:textSize="20sp"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textStyle="bold"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="2dp">
+            <LinearLayout
+                android:id="@+id/btnGoals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/selectableItemBackground"
+                android:focusable="true"
+                android:clickable="true"
+                android:visibility="visible">
+
+                <ImageView
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_marginEnd="2dp"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:text="Editar Metas"
+                    android:textSize="14sp"
+                    android:layout_marginEnd="10dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
 
         <TextView
             android:text="Diária"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textStyle="bold"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"/>
-
-        <TextView
-            android:text="Mensal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textStyle="bold"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"/>
-
-    </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"/>
+
 
             <TextView
                 android:id="@+id/txtDailyGoal"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="?android:attr/textColorPrimary"
                 tools:text="1000ton"
-                android:textSize="16sp"
-                android:layout_marginStart="2dp"/>
-            <TextView
-                android:id="@+id/txtWeeklyGoal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:inputType="numberDecimal"
-                android:textColor="?android:attr/textColorPrimary"
-                tools:text="7000ton"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:layout_marginStart="2dp"/>
 
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:text="Semanal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="2dp">
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/txtWeeklyGoal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="7000ton"
+                android:textSize="18sp"
+                android:layout_marginStart="2dp"/>
 
             <TextView
                 android:text="Mensal"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:textStyle="bold"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="12sp"/>
-
-            <TextView
-                android:text="Anual"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textStyle="bold"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="12sp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+                android:textSize="14sp"/>
 
             <TextView
                 android:id="@+id/txtMonthlyGoal"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 tools:text="30000ton"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="16sp"
-                android:layout_marginStart="2dp"/>
-            <TextView
-                android:id="@+id/txtAnnualGoal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:inputType="numberDecimal"
-                android:textColor="?android:attr/textColorPrimary"
-                tools:text="365000ton"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:layout_marginStart="2dp"/>
 
-        </LinearLayout>
+        <TextView
+            android:text="Anual"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/txtAnnualGoal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="365000ton"
+                android:textSize="18sp"
+                android:layout_marginStart="2dp"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnDelete"
@@ -332,4 +325,40 @@
             android:layout_marginTop="10dp"/>
 
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</ScrollView>
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:orientation="horizontal"
+    android:layout_gravity="top"
+    android:background="?android:attr/colorBackground">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:contentDescription="BackButton"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:scaleType="fitXY"
+            app:tint="?android:attr/iconTint"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_vertical"
+            android:clickable="true"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="Informações da Equipe"
+            android:textAlignment="center"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginEnd="60dp"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
