--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -45,7 +45,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textAlignment="center"
-            android:text="Os Termos de Uso e Privacidade da plataforma 'EcoSynergy' ainda não estão disponíveis na plataforma mobile."
+            android:text="Os Termos de Uso e Privacidade da plataforma 'Ecosynergy' ainda não estão disponíveis na plataforma mobile."
             android:layout_gravity="center"
             android:textSize="16sp"
             android:visibility="visible"/>
