--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -128,85 +128,6 @@
             android:layout_marginBottom="10dp"/>
 
         <TextView
-            android:text="Metas de Emissões"
-            android:layout_gravity="start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12sp"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="2dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/txtDailyGoal"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:inputType="numberDecimal"
-            android:hint="Diária"
-            android:background="@drawable/spinner_background"
-            android:enabled="true"
-            android:textSize="16sp"
-            android:paddingStart="15dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"/>
-            <EditText
-                android:id="@+id/txtWeeklyGoal"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:inputType="numberDecimal"
-                android:hint="Semanal"
-                android:background="@drawable/spinner_background"
-                android:enabled="true"
-                android:textSize="16sp"
-                android:paddingStart="15dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/txtMonthlyGoal"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:inputType="numberDecimal"
-                android:hint="Mensal"
-                android:background="@drawable/spinner_background"
-                android:enabled="true"
-                android:textSize="16sp"
-                android:paddingStart="15dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"/>
-
-            <EditText
-                android:id="@+id/txtAnnualGoal"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:inputType="numberDecimal"
-                android:hint="Anual"
-                android:background="@drawable/spinner_background"
-                android:enabled="true"
-                android:textSize="16sp"
-                android:paddingStart="15dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"/>
-
-        </LinearLayout>
-
-        <TextView
             android:text="Atividade/Setor"
             android:layout_gravity="start"
             android:layout_width="wrap_content"
@@ -225,6 +146,62 @@
             android:background="@drawable/spinner_background"
             android:layout_marginBottom="20dp"/>
 
+        <TextView
+            android:text="Metas de Emissões"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+
+
+
+        <EditText
+            android:id="@+id/txtDailyGoal"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:inputType="numberDecimal"
+            android:hint="Diária"
+            android:background="@drawable/spinner_background"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
+        <EditText
+            android:id="@+id/txtWeeklyGoal"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:inputType="numberDecimal"
+            android:hint="Semanal"
+            android:background="@drawable/spinner_background"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
+
+
+        <EditText
+            android:id="@+id/txtMonthlyGoal"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:inputType="numberDecimal"
+            android:hint="Mensal"
+            android:background="@drawable/spinner_background"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
+
+        <EditText
+            android:id="@+id/txtAnnualGoal"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:inputType="numberDecimal"
+            android:hint="Anual"
+            android:background="@drawable/spinner_background"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
+
         <Button
             android:id="@+id/btnCreateTeam"
             android:layout_width="match_parent"
@@ -232,6 +209,7 @@
             android:text="CRIAR EQUIPE"
             style="@style/CustomButtonStyle"
             android:textStyle="bold"/>
+
     </LinearLayout>
     </LinearLayout>
 
